sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: not found: value b
    while (i> 0 && !b){m = getValeur(j);if (m > v) {setValeur(j+1,m);k = j;b = true};j-=1
                    ^AlgInsertionSort:11: error: not found: value b
    while (i> 0 && !b){m = getValeur(j);if (m > v) {setValeur(j+1,m);k = j;b = true};j-=1
                                                                           ^